# legal-immigration-rag

./: .env.example  .gitignore  .pylintrc  Makefile  RAG for UK Immigration Information.md  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.kiro/specs/legal-immigration-rag/: design.md  requirements.md  tasks.md
data/: immigration_rules_urls.json
data/govuk-data/: batch_report_20251206_171700.json  batch_report_20251206_171830.json  batch_report_20251206_172220.json  batch_report_20251206_173054.json  batch_report_20251206_173223.json  batch_report_20251206_173333.json  index.json  scrape_log.json
data/govuk-data/chunks-embedded/: appendix-a-attributes.json  (+113 more)
data_pipeline/indexing/: __init__.py  incremental.py  progress_tracker.py
data_pipeline/processing/: __init__.py  chunk_converter.py  embedder.py  embedding_providers.py  enhance_chunks_with_sac.py  flag_chunks_for_review.py  rechunk_empty_files.py  reformat_augmented_text.py  summary_augmented_chunker.py
data_pipeline/scrapers/: batch_scrape.py  get_govuk_urls.py  govuk_jina_scraper.py
docs/: data-pipeline.md  embedder-usage.md  hierarchical-legal-parsing.md  indexing-pipeline-quickstart.md  indexing-pipeline.md  sac-implementation-learnings.md  sample-analysis-report.md  setup-complete.md  storage-implementation-summary.md  uv-commands.md
frontend/: index.html  package-lock.json  package.json
scripts/: embed_chunks.py  index_pipeline.py  load_to_vectorstore.py  sample_jina_pages.py  test_scraper_patterns.py  verify_setup.py  verify_storage.py
storage/: __init__.py  factories.py
storage/session/: __init__.py  base.py  redis_session_store.py
storage/vector/: __init__.py  base.py  chromadb_store.py
tests/property/: test_sac_property.py
tests/unit/: test_embedder.py  test_incremental_indexer.py  test_summary_augmented_chunker.py
(+235 files in other folders)
