[project]
name = "legal-immigration-rag"
version = "0.1.0"
description = "A RAG system for UK immigration information"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Legal Immigration RAG Team" }
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "llama-index>=0.9.0",
    "litellm>=1.80.5",
    "hypothesis>=6.92.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "chromadb>=0.4.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "voyageai>=0.3.7",
    "sentence-transformers>=5.1.2",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "rag_pipeline", "data_pipeline", "storage", "evaluation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "property: Property-based tests",
    "slow: Slow running tests",
]
asyncio_mode = "auto"

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.19.0",
]
